# GameJamTemplate

./: CMakeLists.txt  CMakeSettings.json
cmake/: BuildNumberCache.txt.in  SetVersion.cmake  Version.hpp.in
engine/: CMakeLists.txt
engine/include/: Game.inl  ParticleSystem.hpp
engine/src/: Game.cpp
ext/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
game/: CMakeLists.txt
game/include/: TestState.hpp
include/: AnimatedSprite.hpp  AnimatedSprite.inl  CustomMath.inl  Game.hpp  GameScene.hpp  GameState.hpp  Line.hpp  TestState.hpp  Version.hpp
src/: Animation.cpp  Game.cpp  Line.cpp  Main.cpp
